# NINJA-DERJA-SCRAPPER

./: .gitignore  README.md  ninja-derja.example.toml  process_derja_audio.py  pyproject.toml
derja_scraper/: __init__.py  __main__.py  audio.py  cli.py  config.py  display.py  parser.py  scraper.py
input/: input.txt
output_clean/: manifest.txt
tests/: test_audio.py  test_cli.py  test_config.py  test_display.py  test_parser.py  test_scraper.py
tests/fixtures/: missing_audio.html  no_results.html  search_results_arabic.html
