[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derja-scraper"
version = "0.1.0"
description = "Search-result scraper for Derja.Ninja."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "arabic-reshaper>=3.0",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "imageio-ffmpeg>=0.5",
  "lxml>=5.2",
  "python-bidi>=0.6",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
derja-scraper = "derja_scraper.cli:app"
ninja-derja = "derja_scraper.cli:app"

[tool.setuptools.packages.find]
include = ["derja_scraper*"]
exclude = ["tests*", "output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
